[package]
name = "nest-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
google-smartdevicemanagement1 = "7.0.0"
hyper = "1.0"
hyper-rustls = { version = "0.27", features = ["native-tokio"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http2"] }
tokio = { version = "1", features = ["full"] }
yup-oauth2 = "12"
serde_json = "1"
dirs = "6"
